[package]
name = "dgb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1"
serde_derive = "1"
serde_json = "1"
url_encoded_data = "0.6"
sublime_fuzzy = "0.7.0"
lazy_static = "1.4.0"
regex = "1.5.5"
git2 = "0.14.3"
rand = "0.8.5"
rsa = "0.6.1"
clap = { version = "3.1.18", features = ["derive", "env", "unicode", "wrap_help"] }
printpdf = "0.5.0"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
