[package]
name = "dgb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1"
serde_derive = "1"
serde_json = "1"
url_encoded_data = "0.6"
sublime_fuzzy = "0.7.0"
lazy_static = "1.4.0"
regex = "1.5.5"
git2 = "0.14.4"
rand = "0.8.5"
rsa = "0.6.1"
clap = { version = "3.1.18", features = ["derive", "env", "unicode", "wrap_help"] }
printpdf = "0.5.0"
sodiumoxide = "0.2.7"
sequoia-openpgp = { version = "1.8.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression"] }
anyhow = "*"
urlencoding = "2.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
tantivy = "0.17.0"

[dependencies.lettre]
version = "0.10.0-rc.6"
default-features = false
features = [
    "builder", 
    "smtp-transport", 
    "pool", 
    "hostname", 
    "mime03", 
    "pool",
    "rustls-tls",
    "tokio1",
    "tokio1-rustls-tls",
    "dkim"
]

[patch.crates-io]
sha1collisiondetection = { git = "https://gitlab.com/sequoia-pgp/sha1collisiondetection", rev = "ac46241e3b60ea2db55c1ecbd8234870f4503d54" }

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
