[package]
name = "dgb-server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Felix Schütt <Felix.Schuett@vlf-brandenburg.de>"]

[dependencies]
actix-web = { version = "4.0.1", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "compress-zstd", "cookies", "rustls"] }
serde = { version = "1.0.137", default-features = false, features = ["std"] }
serde_derive = { version = "1.0.137", default-features = false, features = [] }
serde_json = { version = "1.0.81", default-features = false, features = ["std"] }
lazy_static = { version = "1.4.0", default-features = false, features = [] }
regex = { version = "1.5.6", default-features = false, features = ["std", "perf", "unicode"] }
git2 = { version = "0.13.4", default-features = false }
clap = { version = "3.1.18", default-features = false, features = ["derive", "std", "env", "unicode", "wrap_help"] }
printpdf = { version = "0.5.0", default-features = false, features = [] }
sodiumoxide = { version = "0.2.7", default-features = false, features = [] }
sequoia-openpgp = { version = "1.8.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression"] }
anyhow = { version = "1.0.57", default-features = false, features = [] }
urlencoding = { version = "2.1.0", default-features = false, features = [] }
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
tokio = { version = "1", default-features = false, features = ["full", "rt"] }
base64 = { version = "0.13.0", default-features = false, features = ["std"] }
tantivy = { version = "0.17.0", default-features = false, features = ["mmap", "lz4-compression"] }
hyphenation = { version = "0.8.4", default-features = false, features = ["embed_all", "nfc"] }
textwrap = { version = "0.15.0", default-features = false, features = ["unicode-linebreak", "unicode-width", "smawk", "hyphenation"] }
log = { version = "0.4.17", default-features = false, features = ["max_level_trace", "release_max_level_debug"] }
slog = { version = "2.7.0", default-features = false, features = ["max_level_trace", "release_max_level_debug"] }
slog-term = { version = "2.9.0", default-features = false, features = ["nested-values"] }
slog-async = { version = "2.7.0", default-features = false, features = [] }
kube = { version = "0.73.1", default-features = false, features = ["client", "rustls-tls", "gzip", "config"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_23"] }
comrak = { version = "0.13.1", default-features = false, features = [] }
actix-web-httpauth = { version = "0.6.0", default-features = false, features = [] }
chrono = { version = "0.4.19", default-features = false, features = ["alloc", "std", "clock", "serde"] }
uuid = { version = "1.1.2", default-features = false, features = ["v4", "fast-rng","macro-diagnostics"] }
lz4_flex = { version = "0.9.3", default-features = false }
actix-cors = { version = "0.6.2", default-features = false, features = [] }
gbx = { git = "https://github.com/projekt-dgb/gbx", rev = "c624d311f9a0702e07f4aebe97d8bad141803c8f" }
rustls-acme = { version = "0.6.0" }
rustls = "0.20.6"
futures-rustls = "0.22.2"
futures = "0.3.21"

[dependencies.lettre]
version = "0.10.0-rc.6"
default-features = false
features = [
    "builder", 
    "smtp-transport", 
    "pool", 
    "hostname", 
    "mime03", 
    "pool",
    "rustls-tls",
    "tokio1",
    "tokio1-rustls-tls",
    "dkim"
]

[patch.crates-io]
sha1collisiondetection = { git = "https://gitlab.com/sequoia-pgp/sha1collisiondetection", rev = "ac46241e3b60ea2db55c1ecbd8234870f4503d54" }

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled", "vtab", "array"]

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 16
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
strip = false

[package.metadata.deb]
maintainer = "Felix Schütt <Felix.Schuett@vlf-brandenburg.de>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/dgb-server", "usr/local/bin/", "755"],
    ["dgb-server.desktop", "usr/local/share/applications/", "755"],
    ["dgb-server.xpm", "usr/share/pixmaps/", "755"],
]
